test/fail/die-str.js
'use strict'

var Seneca = require('../..')
var seneca = Seneca()

seneca.die('foo')
